@startuml

title __GERAETELISTE's Class Diagram__\n

  namespace com.example.edelhome {
    namespace ui.geraet {
      namespace liste {
        class com.example.edelhome.ui.geraeteliste.G_ListFragment {
            - auth : FirebaseAuth
            - db : FirebaseFirestore
            - gName : CollectionReference
            - geraete : ArrayList<String>
            - ipAdress : ArrayList<String>
            + onActivityCreated()
            + onListItemClick()
            + setGeraetOff()
            - getName()
            - setGeraetOn()
        }
      }
    }
  }
  

  namespace com.example.edelhome {
    namespace ui.geraet {
      namespace liste {
        class com.example.edelhome.ui.geraeteliste.GeraetelisteFragment {
            - btnOff : Button
            - btnOn : Button
            - ip : String
            - txt_ueberschrifft : TextView
            + onCreateView()
            - addGeräte()
        }
      }
    }
  }
  

  namespace com.example.edelhome {
    namespace ui.geraet {
      namespace liste {
        class com.example.edelhome.ui.geraeteliste.GeraetelisteViewModel {
            - mText : MutableLiveData<String>
            + GeraetelisteViewModel()
            + getText()
        }
      }
    }
  }
  

  com.example.edelhome.ui.geraeteliste.G_ListFragment -up-|> androidx.fragment.app.ListFragment
  com.example.edelhome.ui.geraeteliste.GeraetelisteFragment -up-|> androidx.fragment.app.Fragment
  com.example.edelhome.ui.geraeteliste.GeraetelisteFragment o-- com.example.edelhome.ui.geraet.GeraetFragment : geraetFragment
  com.example.edelhome.ui.geraeteliste.GeraetelisteFragment o-- com.example.edelhome.ui.geraeteliste.GeraetelisteFragment : geraetelisteFragment
  com.example.edelhome.ui.geraeteliste.GeraetelisteFragment o-- com.example.edelhome.ui.geraeteliste.GeraetelisteViewModel : geraetelisteViewModel
  com.example.edelhome.ui.geraeteliste.GeraetelisteViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
